# opengl-vs-webgpu

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.cpp
.github/workflows/: cmake-cross-compiler.yml  cmake-multi-platform.yml
lib/core/: CMakeLists.txt
lib/core/include/: Renderer.h  Window.h
lib/core/opengl/include/: OpenGLRenderer.h
lib/core/opengl/src/: OpenGLRenderer.cpp
lib/core/src/: Window.cpp
lib/core/webgpu/include/: WebGPURenderer.h
lib/core/webgpu/src/: WebGPURenderer.cpp  utils_metal.mm
